= Release notes for version 0.1.12 (release date: 14.06.2021)

== Notices:
- improved request/response body validation of WiremockStubDifferenceDetectingInterceptor, it validates json field values
from now on.
- updated release script, added parameters for avoiding timeout error when publishing artifacts on Maven Central.
- changes in `crealogix-adapter`, PreAuthorisationException is a child of RequestValidationException now and can be handled
by a client validation resolver.
- in `crealogix-adapter` README, added description of how to register a TPP in DKB.
- migrate to java 11

== Fixes:
- fixing `crealogix-adapter`, the provider has changed its Oauth Embedded Pre-Step flow which broke the adapter. Implemented
changes will handle a new flow. Also, there is no need for any DKB secrets and keys.