@@ -8,10 +8,13 @@ public class BaseHttpClientConfig implements HttpClientConfig {
 
     private final HttpLogSanitizer logSanitizer;
     private final Pkcs12KeyStore keyStore;
+    private final String wiremockStandaloneUrl;
 
-    public BaseHttpClientConfig(HttpLogSanitizer logSanitizer, Pkcs12KeyStore keyStore) {
+    public BaseHttpClientConfig(HttpLogSanitizer logSanitizer, Pkcs12KeyStore keyStore,
+                                String wiremockStandaloneUrl) {
         this.logSanitizer = logSanitizer;
         this.keyStore = keyStore;
+        this.wiremockStandaloneUrl = wiremockStandaloneUrl;
     }
 
     @Override
@@ -22,5 +25,9 @@ public class BaseHttpClientConfig implements HttpClientConfig {
     @Override
     public Pkcs12KeyStore getKeyStore() {
         return keyStore;
+    }
+
+    public String getWiremockStandaloneUrl() {
+        return wiremockStandaloneUrl;
     }
 }
